<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/main_cardview_inbetween_margin"
            android:padding="@dimen/main_cardview_inbetween_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="@dimen/main_cardview_inner_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_scoreLabel"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/main_score_TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="250dp"
                    android:paddingLeft="10dp"
                    android:textSize="25sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_question_CardView_size"
            android:layout_marginBottom="@dimen/main_cardview_inbetween_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/main_cardview_inbetween_margin">

                <TextView
                    android:id="@+id/main_question_TextView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/main_question_TextView_size"
                    android:gravity="center"
                    android:textSize="30sp" />

                <View
                    android:id="@+id/main_colorBar"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:layout_alignParentLeft="true"
                    android:background="#FFFFFF" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="2">

                    <Button
                        android:id="@+id/main_yes_Button"
                        style="@style/CardView_GridButton"
                        android:drawableLeft="@drawable/ic_check_black_48px"
                        android:text="@string/main_yesText" />

                    <Button
                        android:id="@+id/main_no_Button"
                        style="@style/CardView_GridButton"
                        android:drawableRight="@drawable/ic_close_black_48px"
                        android:text="@string/main_noText" />

                    <Button
                        android:id="@+id/main_hint_Button"
                        style="@style/CardView_GridButton"
                        android:drawableLeft="@drawable/ic_lightbulb_outline_black_48px"
                        android:text="@string/main_hintText" />

                    <Button
                        android:id="@+id/main_cheat_Button"
                        style="@style/CardView_GridButton"
                        android:drawableRight="@drawable/ic_vpn_key_black_48px"
                        android:text="@string/main_cheatText" />

                </GridLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_next_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_chevron_right_black_48px"
                android:text="@string/main_nextText"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>